fixed the header alignment issues

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,7 +23,7 @@ ul > li {
   width: 350px;
 }
 
-header {
+.header {
   position: absolute;
   top: 0;
   width: 100%;
@@ -37,7 +37,7 @@ header {
   );
 }
 
-footer {
+.footer {
   position: fixed;
   bottom: 0;
   width: 100%;
